Fixed z-index of Navigation-Button

--- a/src/app/common/header/navigation/navigation.component.scss
+++ b/src/app/common/header/navigation/navigation.component.scss
@@ -14,7 +14,7 @@
         position: relative;
         top: .4rem;
         right: 0;
-        z-index: 10;
+        z-index: 12;
         box-shadow: 0 1rem 3rem rgba($color-black, 0.1);
         text-align: center;
         cursor: pointer;
@@ -28,7 +28,7 @@
         left: 0;
         background: $color-primary;
         background: linear-gradient(180deg, rgba(63,81,181,1) 0%, rgba(101,115,195,1) 100%);
-        z-index: 1000;
+        z-index: 10;
         transition: all 0.8s cubic-bezier(0.86, 0, 0.77, 1);
     }
 
@@ -37,7 +37,7 @@
         position: fixed;
         top: 20vh;
         left: -100rem;
-        z-index: 1500;
+        z-index: 15;
         width: 0;
         opacity: 0;
         transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
